<resources>
    <string name="app_name">JLJApp</string>
    <string name="jlj_application">JLJ Application</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="register_user">Register user</string>
    <string name="your_password">Your Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="age">Age</string>
    <string name="full_name">Full name</string>
    <string name="jlj_application2">JLJ Application</string>
    <string name="title_activity_my_web_view">MyWebView</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>